--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
+    "class-validator": "^0.14.0",
+    "cls-hooked": "^4.2.2",
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.12.2"
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
+    "telegraf": "^4.12.2",
+    "umzug": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
