--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.1.2",
     "@nestjs/core": "^10.1.2",
     "@nestjs/platform-express": "^10.1.2",
+    "@nestjs/schedule": "^3.0.2",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
     "class-validator": "^0.14.0",
@@ -39,6 +40,7 @@
     "@nestjs/cli": "^10.1.10",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.1.2",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.4",
