--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
     "class-validator": "^0.14.0",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
     "reflect-metadata": "^0.1.13",
