--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0",
+    "nestjs-telegraf": "^2.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.32.1",
