--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.6",
     "telegraf": "^4.12.2",
     "umzug": "^3.2.1"
   },
