--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.1.2",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.1.2",
     "@nestjs/platform-express": "^10.1.2",
     "@nestjs/schedule": "^3.0.2",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.2",
+    "axios": "^1.5.0",
     "class-validator": "^0.14.0",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -61,7 +63,7 @@
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -79,5 +81,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
