--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.6",
     "telegraf": "^4.14.0",
-    "umzug": "^3.3.1"
+    "umzug": "^3.3.1",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.18",
