--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.3.0",
+    "@types/ip": "^1.1.3",
     "axios": "^1.6.8",
     "class-validator": "^0.14.1",
     "colors": "^1.4.0",
@@ -84,5 +85,5 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.5.1"
 }
