--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "ip": "^2.0.1",
+    "nestjs-openai": "^0.0.1",
     "nestjs-telegraf": "^2.7.0",
+    "openai": "^5.1.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.1",
