--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.3.7",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.3.7",
@@ -39,7 +40,7 @@
     "nestjs-telegraf": "^2.7.0",
     "openai": "^5.1.1",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
