--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sqlite3": "^5.1.7",
     "telegraf": "^4.16.3",
     "umzug": "^3.7.0",
+    "ytdl": "^1.4.1",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
